--- a/eastwest/4_fedora_pod_br-10-1-128.yaml
+++ b/eastwest/4_fedora_pod_br-10-1-128.yaml
@@ -2,18 +2,18 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: fedora10-1-128
+  name: multitool-10-1-128
   annotations:
     k8s.v1.cni.cncf.io/networks: '[ { "name": "br-10-1-128" } ]'
 spec:
   containers:
-  - name: fedora
-    image: ghcr.io/redhat-nfvpe/multus-service-demo:fedora-tools
+  - name: multitool
+    image: praqma/network-multitool
     imagePullPolicy: Always
     command: ["/bin/sh","-c"]
     args: 
       - ip route add 10.2.128.0/24 via 10.1.128.2;
         ip route add 1.1.1.1/32 via 10.1.128.2;
-        /sbin/init;
+        /usr/sbin/nginx -g "daemon off;"
     securityContext:
       privileged: true
