--- a/eastwest/1_net_attach_10_1_128.yaml
+++ b/eastwest/1_net_attach_10_1_128.yaml
@@ -4,7 +4,8 @@ kind: NetworkAttachmentDefinition
 metadata:
   name: br-10-1-128
 spec:
-  config: '{
+  config: |-
+    {
             "cniVersion": "0.3.1",
             "name": "crio",
             "type": "bridge",
@@ -12,11 +13,23 @@ spec:
             "ipMasq": false,
             "ipam": {
                 "type": "whereabouts",
-                "range":     "10.1.128.0/24",
+                "range": "10.1.128.0/24",
+                "gateway": "10.1.128.2",
+                "log_file": "/tmp/whereabouts.log",
+                "log_level": "debug",
+                "routes": [
+                  { 
+                    "dst": "10.2.128.0/24",
+                    "gw": "10.1.128.2"
+                  },
+                  { "dst": "1.1.1.1/32",
+                    "gw": "10.1.128.2"
+                  }
+                ],
                 "exclude": [
                   "10.1.128.1/32",
                   "10.1.128.2/32",
                   "10.1.128.254/32"
                 ]
             }
-        }'
+    }
