--- a/eastwest/5_fedora_pod_br-10-2-128.yaml
+++ b/eastwest/5_fedora_pod_br-10-2-128.yaml
@@ -18,9 +18,9 @@ spec:
     imagePullPolicy: Always
     command: ["/bin/sh","-c"]
     args:
-      - ip route add 10.1.128.0/24 via 10.2.128.2;
-        ip route add 1.1.1.1/32 via 10.2.128.2;
-        /usr/sbin/nginx -g "daemon off;"
+      #- ip route add 10.1.128.0/24 via 10.2.128.2;
+      #  ip route add 1.1.1.1/32 via 10.2.128.2;
+      -  /usr/sbin/nginx -g "daemon off;"
         #/sbin/init;
     securityContext:
       privileged: true
