add allow PING for internet bound traffic

--- a/eastwest/config/firewallpolicy.yaml
+++ b/eastwest/config/firewallpolicy.yaml
@@ -39,7 +39,7 @@ data:
                set dstintf eth0
                set srcaddr all
                set dstaddr all
-               set service HTTPS HTTP
+               set service HTTPS HTTP PING
                set ssl-ssh-profile "deep-inspection"
                set ips-sensor "default"
                set nat enable
