--- a/north/firewallpolicy.yaml
+++ b/north/firewallpolicy.yaml
@@ -9,6 +9,7 @@ metadata:
 data:
   type: partial
   config: |-
+    config firewall policy
            edit "3"
                set utm-status enable
                set name "pod_to_internet_HTTPS_HTTP"
