change to use ipam to assign custom route

--- a/north-default/misc/100-crio-bridge.conf
+++ b/north-default/misc/100-crio-bridge.conf
@@ -1,8 +1,6 @@
 {
     "cniVersion": "0.3.1",
     "name": "crio",
-    "plugins": [
-      {
        "type": "bridge",
        "bridge": "cni0",
        "isGateway": true,
@@ -11,7 +9,7 @@
        "ipam": {
            "type": "host-local",
            "routes": [
-               { "dst": "0.0.0.0/0" },
+               { "dst": "10.96.0.0/12","gw": "10.85.0.1" },
                { "dst": "1100:200::1/24" }
            ],
            "ranges": [
@@ -19,24 +17,4 @@
                [{ "subnet": "1100:200::/24" }]
            ]
        }
-      },
-      {
-          "type" : "route-override",
-          "flushroutes" : true,
-          "delroutes": [
-          {
-              "dst": "0.0.0.0/0"
-          }],
-          "addroutes": [
-             {
-                 "dst": "10.96.0.0/12",
-                 "gw": "10.85.0.1"
-             },
-             {
-                 "dst": "5.6.7.8/32",
-                 "gw": "10.85.0.1"
-             }
-          ]
-      }
-    ]
 }
