set defautlgw to true

--- a/north-test/2023220/cfos_demo_bridge_egress/cfosdefaultcni5.conf
+++ b/north-test/2023220/cfos_demo_bridge_egress/cfosdefaultcni5.conf
@@ -3,7 +3,7 @@
     "name": "cfosdefaultcni5",
        "type": "bridge",
        "bridge": "cni5",
-       "isGateway": false,
+       "isGateway": true,
        "ipMasq": true,
        "hairpinMode": true,
        "ipam": {
