--- a/north-test/2023220/cfos_demo_bridge_egress/04_cfosfirewallpolicy.yaml
+++ b/north-test/2023220/cfos_demo_bridge_egress/04_cfosfirewallpolicy.yaml
@@ -20,6 +20,8 @@ data:
                set service HTTPS HTTP PING DNS
                set ssl-ssh-profile "deep-inspection"
                set ips-sensor "default"
+               set webfilter-profile "default"
+               set av-profile "default"
                set nat enable
                set logtraffic all
            next
