--- a/north-test/2023220/flannel/cfosdeployment.yaml
+++ b/north-test/2023220/flannel/cfosdeployment.yaml
@@ -32,8 +32,8 @@ spec:
       labels:
         app: fos
       annotations:
-        #v1.multus-cni.io/default-network: default/cfosdefaultcni5
-        k8s.v1.cni.cncf.io/networks: '[ { "name": "br-10-244-2",  "ips": [ "10.244.2.2/32" ], "mac": "CA:FE:C0:FF:EE:02" } ]'
+        v1.multus-cni.io/default-network: default/br-default-flannel
+        k8s.v1.cni.cncf.io/networks: '[ { "name": "default/cfosdefaultcni5",  "ips": [ "10.1.128.2/32" ], "mac": "CA:FE:C0:FF:00:02" } ]'
     spec:
       containers:
       - name: fos
