--- a/north-test/2023220/flannel/cniconfig.conf
+++ b/north-test/2023220/flannel/cniconfig.conf
@@ -6,14 +6,22 @@
     "isGateway": true,
     "ipMasq": true,
     "hairpinMode": true,
-    "ipam": {
-        "type": "host-local",
-        "routes": [
-            { "dst": "10.96.0.0/12","gw": "10.86.0.1" },
-            { "dst": "10.0.0.2/32", "gw": "10.86.0.1" }
-        ],
-        "ranges": [
-            [{ "subnet": "10.86.0.0/16" }]
-        ]
-    }
+      "ipam": {
+      "type": "whereabouts",
+      "range": "10.1.128.0/24",
+      "gateway": "10.1.128.2",
+      "log_file": "/tmp/whereabouts.log",
+      "log_level": "debug",
+      "routes": [
+        {
+          "dst": "10.2.128.0/24",
+          "gw": "10.1.128.2"
+        }
+      ],
+      "exclude": [
+         "10.1.128.1/32",
+         "10.1.128.2/32",
+         "10.1.128.254/32"
+      ]
+      }
 }
