--- a/north-test/2023220/flannel/net_new_default_network_for_cfos.yaml
+++ b/north-test/2023220/flannel/net_new_default_network_for_cfos.yaml
@@ -1,7 +1,7 @@
 apiVersion: "k8s.cni.cncf.io/v1"
 kind: NetworkAttachmentDefinition
 metadata:
-  name: br-10-244-0
+  name: br-default-flannel
 spec:
   config: |-
     {
