--- a/north-test/2023220/flannel/app.yaml
+++ b/north-test/2023220/flannel/app.yaml
@@ -16,7 +16,7 @@ spec:
         app: test01
       annotations:
         #k8s.v1.cni.cncf.io/networks: '[ { "name": "br-10-244-2",  "ips": [ "10.244.2.3/32"], "default-route": ["10.244.2.2"]  } ]'
-        v1.multus-cni.io/default-network: default/br-default-flannel
+        v1.multus-cni.io/default-network: br-default-flannel
         k8s.v1.cni.cncf.io/networks: '[ { "name": "default/cfosdefaultcni5",  "default-route": ["10.1.128.2"]  } ]'
     spec:
       containers:
