--- a/north-test/2023220/flannel/net_new_default_network_for_cfos.yaml
+++ b/north-test/2023220/flannel/net_new_default_network_for_cfos.yaml
@@ -2,6 +2,7 @@ apiVersion: "k8s.cni.cncf.io/v1"
 kind: NetworkAttachmentDefinition
 metadata:
   name: br-default-flannel
+  namespace: kube-system
 spec:
   config: |-
     {
