--- a/north-test/2023220/flannel/app.yaml
+++ b/north-test/2023220/flannel/app.yaml
@@ -2,25 +2,25 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: test01-deployment
+  name: multitool01-deployment
   labels:
-      app: test01
+      app: multitool01
 spec:
   replicas: 1
   selector:
     matchLabels:
-        app: test01
+        app: multitool01
   template:
     metadata:
       labels:
-        app: test01
+        app: multitool01
       annotations:
         #k8s.v1.cni.cncf.io/networks: '[ { "name": "br-10-244-2",  "ips": [ "10.244.2.3/32"], "default-route": ["10.244.2.2"]  } ]'
         v1.multus-cni.io/default-network: br-default-flannel
         k8s.v1.cni.cncf.io/networks: '[ { "name": "cfosdefaultcni5",  "default-route": ["10.1.128.2"]  } ]'
     spec:
       containers:
-        - name: test01
+        - name: multitool01
           #image: wbitt/network-test
           image: docker.io/wbitt/network-multitool
             #image: nginx:latest
