--- a/north-test/2023220/flannel/cfosdeployment.yaml
+++ b/north-test/2023220/flannel/cfosdeployment.yaml
@@ -17,9 +17,9 @@ spec:
 ---
 
 apiVersion: apps/v1
-kind: Deployment
+kind: DaemonSet
 metadata:
-  name: DaemonSet
+  name: fos-deployment
   labels:
       app: fos
 spec:
