--- a/north-test/2023220/flannel/net_bridge_secondary_network_full.yaml
+++ b/north-test/2023220/flannel/net_bridge_secondary_network_full.yaml
@@ -10,7 +10,7 @@ spec:
       "type": "bridge",
       "bridge": "cni5",
       "isGateway": true,
-      "ipMasq": true,
+      "ipMasq": false,
       "hairpinMode": true,
       "ipam": {
           "type": "host-local",
