--- a/north-test/2023220/flannel/net_bridge_secondary_network_full_with_whereabout.yaml
+++ b/north-test/2023220/flannel/net_bridge_secondary_network_full_with_whereabout.yaml
@@ -11,7 +11,7 @@ spec:
               {
                 "name": "cfosdefaultcni5",
                 "type": "bridge",
-                "isGateway": true,
+                "isGateway": false,
                 "bridge": "cni5",
                 "ipMasq": false,
                 "ipam": {
