--- a/north-test/2023220/flannel/net_bridge_secondary_network_full_with_whereabout.yaml
+++ b/north-test/2023220/flannel/net_bridge_secondary_network_full_with_whereabout.yaml
@@ -13,7 +13,7 @@ spec:
                 "type": "bridge",
                 "isGateway": false,
                 "bridge": "cni5",
-                "ipMasq": false,
+                "ipMasq": true,
                 "ipam": {
                     "type": "whereabouts",
                     "range": "10.1.128.0/24",
