--- a/userguide/01-preparation/sample_docker_secret.yaml
+++ b/userguide/01-preparation/sample_docker_secret.yaml
@@ -1,8 +1,7 @@
-apiVersion: v1
-kind: Secret
-metadata:
-  name: myregistrykey
-  namespace: default
-data:
-  .dockerconfigjson: <replace with your base64 encoded config.json file content >
-type: kubernetes.io/dockerconfigjson
+    apiVersion: v1
+    kind: Secret
+    metadata:
+      name: myregistrykey
+    data:
+      .dockerconfigjson: replace this with your base64encodedsecret
+    type: kubernetes.io/dockerconfigjson
