use nfs for cfos

--- a/north-test/2023220/flannel-default/cfosdeployment.yaml
+++ b/north-test/2023220/flannel-default/cfosdeployment.yaml
@@ -61,5 +61,9 @@ spec:
       - name: dockerinterbeing
       volumes:
       - name: data-volume
-        persistentVolumeClaim:
-          claimName: cfosdata
+        nfs:
+          server: 10.0.1.100
+          path: /home/ubuntu/data
+          readOnly: no
+        #persistentVolumeClaim:
+        #claimName: cfosdata
