add label and namespace

--- a/demo/eks/policy/constraint_addrgrp.yaml
+++ b/demo/eks/policy/constraint_addrgrp.yaml
@@ -16,6 +16,9 @@ spec:
     podcidr: "10.85.0.0/16"
     label: "cfosegressfirewallpolicy"
     addrgrouplabel: "defaultappmultitool"
+    namespace: "default"
+    labelkey: "app"
+    labelvalue: "multitool"
     outgoingport: "eth0"
     utmstatus: "enable"
     ipsprofile: "default"
