--- a/demo/eks/policy/networkPolicySameple.yaml
+++ b/demo/eks/policy/networkPolicySameple.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   podSelector:
     matchLabels:
-      app: multitool01
+      app: multitool
       namespace: default
   egress:
   - to:
