--- a/demo/eks/policy/constraint_addrgrp.yaml
+++ b/demo/eks/policy/constraint_addrgrp.yaml
@@ -12,13 +12,8 @@ spec:
     firewalladdressapiurl : "http://fos-deployment.default.svc.cluster.local/api/v2/cmdb/firewall/address"
     firewallpolicyapiurl : "http://fos-deployment.default.svc.cluster.local/api/v2/cmdb/firewall/policy"
     firewalladdressgrpapiurl: "http://fos-deployment.default.svc.cluster.local/api/v2/cmdb/firewall/addrgrp"
-    message: "deny any any"
-    podcidr: "10.85.0.0/16"
+    policyid : "200"
     label: "cfosegressfirewallpolicy"
-    addrgrouplabel: "defaultappmultitool"
-    namespace: "default"
-    labelkey: "app"
-    labelvalue: "multitool"
     outgoingport: "eth0"
     utmstatus: "enable"
     ipsprofile: "default"
