--- a/demo/eks/policy/networkPolicySameple.yaml
+++ b/demo/eks/policy/networkPolicySameple.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: test
+  name: testtest
   labels:
     app: cfosegressfirewallpolicy
 spec:
@@ -12,11 +12,4 @@ spec:
   egress:
   - to:
     - ipBlock:
-        cidr: 200.0.0.0/24
-    ports:
-    - protocol: TCP
-      port: 443
-    - protocol: TCP
-      port: 80
-    - protocol: UDP
-      port: 53
+        cidr: 0.0.0.0/0
