--- a/demo/eks/policy/watchandupdatcfospodip.yaml
+++ b/demo/eks/policy/watchandupdatcfospodip.yaml
@@ -14,10 +14,10 @@ rules:
 - apiGroups: [""]
   resources: ["pods"]
   verbs: ["list", "get", "watch"]
-- apiGroups: [""]
-  resources: ["pods/exec"]
-  verbs: ["create"]
-
+    #- apiGroups: [""]
+    #  resources: ["pods/exec"]
+    #  verbs: ["create"]
+    #
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
