--- a/demo/eks/policy/networkPolicySameple.yaml
+++ b/demo/eks/policy/networkPolicySameple.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: testtest
+  name: createdbygatekeeper
   labels:
     app: cfosegressfirewallpolicy
 spec:
