--- a/demo/gke/cFAZ/fazcontainer.yaml
+++ b/demo/gke/cFAZ/fazcontainer.yaml
@@ -20,10 +20,10 @@ spec:
 #        image: busybox
 #        command: ['sh', '-c', 'sleep 1200']
       nodeSelector: 
-        os: linux
+        os: linux1
       containers:
         - name: fortianalyzer
-          image: fortinet/fortianalyzer:7.0.7
+          image: fortinet/fortianalyzer:7.4
 #          resources:
 #            limits:
 #              cpu: "4"
